:toc:
:toclevels: 1

= Changelog

All notable changes to this project are documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog].

= 2021

== 2021-11-08
=== Security

* Bumped guava and jsoup to address CVE vulnerabilities: CVE-2020-8908, CVE-2021-37714

== 2021-10-08
=== Added

* Initial release. All commits are squashed for safety reasons. The original repository lives in GitHub's CircleCI-Archived org.