@@ -7,6 +7,12 @@ All notable changes to this project are documented in this file.
 
 The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog].
 
+= 2025
+== 2025-08-22
+=== Added
+
+* Added the `check-forbidden-dependencies` command
+
 = 2021
 
 == 2021-11-08
